agregando preguntas frecuentes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1325,7 +1325,7 @@ section {
 .slider-1 .testimonial-text {
 	margin-bottom: 1.875rem;
 	color: #838a9c;
-	font-style: italic;
+	/* font-style: italic; */
 	font-size: 1.5rem;
 	line-height: 2.25rem;
 }
@@ -1393,4 +1393,35 @@ section {
 	}
 	/* end of testimonials */
 
+}
+
+
+/*--------------------------------------------------------------
+# Frequently Asked Questions
+--------------------------------------------------------------*/
+.faq .faq-item {
+  margin: 20px 0;
+  padding: 20px 0;
+  border-bottom: 1px solid #dde8f1;
+}
+
+.faq .faq-item i {
+  color: #9bbbd7;
+  font-size: 20px;
+  float: left;
+  line-height: 0;
+  padding: 13px 0 0 0;
+  margin: 0;
+}
+
+.faq .faq-item h4 {
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 500;
+  margin: 0 0 10px 28px;
+  font-family: "Poppins", sans-serif;
+}
+
+.faq .faq-item p {
+  font-size: 15px;
 }
