--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -244,7 +244,7 @@ section {
 }
 
 .section-bg {
-  background: linear-gradient(180deg, #f2f6fa 0%, #fff 100%);
+  background: linear-gradient(180deg, #f7faf2 0%, #fff 100%);
 }
 
 .section-title {
