--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -486,6 +486,31 @@ section {
   min-height: 400px;
 }
 
+
+.about .image1 {
+  background: url("../img/bannerAppsWeb.jpg") center center no-repeat;
+  background-size: cover;
+  min-height: 400px;
+}
+
+
+.about .image2 {
+  background: url("../img/Desarrollo-de-un-Marketplace.jpg") center center no-repeat;
+  background-size: cover;
+  min-height: 400px;
+}
+
+.about .image3 {
+  background: url("../img/bannerAppsPersonalizada.jpg") center center no-repeat;
+  background-size: cover;
+  min-height: 400px;
+}
+.about .image4 {
+  background: url("../img/movil.png") center center no-repeat;
+  background-size: cover;
+  min-height: 400px;
+}
+
 @media (max-width: 667px) {
   .about .image img {
     max-width: 100%;
@@ -1316,7 +1341,10 @@ section {
 }
 
 .slider-1 .card {
-	border: none;
+  box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
+  background: #fff;
+  height: 420px;
+  /* border: black solid 1px; */
 }
 
 .slider-1 .card-body {
@@ -1325,15 +1353,16 @@ section {
 
 .slider-1 .quotes {
 	margin-bottom: 3rem;
+  padding-top: 30px;
 	width: 64px;
 }
 
 .slider-1 .testimonial-text {
 	margin-bottom: 1.875rem;
-	color: #838a9c;
-	/* font-style: italic; */
-	font-size: 1.5rem;
+	color: black;
+	font-size: 1rem;
 	line-height: 2.25rem;
+  text-align: center;
 }
 
 .slider-1 .testimonial-image {
@@ -1349,7 +1378,11 @@ section {
 	font-weight: 700;
 	font-size: 1.125rem;
 }
-
+.slider-1 .details {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
 
 @media (min-width: 992px) {
   /* Testimonials */
