--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -827,7 +827,7 @@ section {
 }
 
 .pricing .box {
-  padding: 40px;
+  padding: 40px 20px;
   margin-bottom: 30px;
   box-shadow: 0px 0px 30px rgba(73, 78, 92, 0.15);
   background: #fff;
@@ -835,8 +835,12 @@ section {
   position: relative;
 }
 
+
 .pricing .box .subtitle {
   color: var(--secundary);
+}
+.pricing .box .description {
+  font-size: 13px;
 }
 
 .pricing .featured-badge {
